--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ jobs:
   main:
     name: main
     runs-on: ubuntu-latest
-    container: ghcr.io/eebssk1/bbk/debian-bookworm:0.1
+    container: ghcr.io/eebssk1/bbk/debian-bookworm:latest
 
     steps:
       - uses: actions/checkout@v1
